refactor: define shared group query and catalog contracts